client/scss/main.scss
@import 'submit';

$link-color: #83A1B4;
$button-color: #83B4AF;
$header-color: #8489B5;
$error-color: #A30000;
$info-color: #E6F6Fb;

body {
  font-family: 'Open Sans', sans-serif;
  margin: 0;
}

header {
  background-color: $header-color;
  border-bottom: 5px solid darken($header-color, 10%);
  display: flex;
  align-items: center;
  padding: 0.5em;

  .username {
    color: #FFFFFF;
    font-size: 0.9em;
  }

  h1 {
    margin: 0;
    flex-grow: 1;

    a {
      text-decoration: none;
      color: #FFFFFF;
    }
  }
}

.content {
  padding: 1em;
}

.form-row {
  margin: 0.5em;

  label {
    display: inline-block;
    width: 200px;
    margin-right: 0.5rem;
    text-align: right;
  }

  div.error {
    color: $error-color;
    margin-left: 200px;
    font-size: 0.8em;
  }

  .validation-error {
    color: $error-color;
  }
}

.story-container {
  display: flex;

  .story {
    margin: 0.5rem;

    h4 {
      margin: 0;
      display: inline-block;
    }

    a {
      color: $link-color;
      text-decoration: none;

      &:hover {
        color: lighten($link-color, 10%);
      }
    }

    .info {
      font-size: 0.8em;
      color: #999999; 
    }
  }

  .story-votes-container {
    align-self: center;
    font-weight: bold;
    display: flex;
    flex-direction: column;

    .story-votes {
      text-align: center;
    }

    .vote-button {
      cursor: pointer;
    }

    &.upvote .upvote, &.upvote .story-votes {
      color: #F97849;
    }

    &.downvote .downvote, &.downvote .story-votes {
      color: #827DFF;
    }
  }
}

input {
  &.error {
    border: 1px solid $error-color;
  }
}

.message {
  background-color: $info-color;
  border: 1px solid darken($info-color, 10%);
  border-left-width: 5px;
  border-radius: 5px;
  padding: 0.5em;
  font-size: 0.8em;
  color: darken($info-color, 40%);

  &.message-error {
    background-color: lighten($error-color, 60%);
    border-color: $error-color;
    color: $error-color; 
  }
}

button {
  background-color: $button-color;
  border-radius: 3px;
  border: 1px solid darken($button-color, 5%);
  padding: 0.25rem 0.5rem;
  margin: 0.5em;
  font-size: 0.8rem;
  cursor: pointer;
  color: #FFFFFF;
  transition: background-color 0.2s, border-color 0.2s;

  &:hover {
    background-color: lighten($button-color, 10%);
    border-color: $button-color;
  }

  &:disabled {
    opacity: 0.5;

    &:hover {
      background-color: $button-color;
      cursor: not-allowed;
    }
  }
}

#signup-form {
  label {
    width: 9rem;
  }

  div.error {
    margin-left: 9.8rem;
  }
}

#login-form {
  label {
    width: 5rem;
  }

  div.error {
    margin-left: 5.8rem;
  }
}

